--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="shortcut icon" href="assets/img/logo.png">
+        <link rel="shortcut icon" href="assets/img/stache.png">
 
-        <title>MEAN Starter ES6</title>
+        <title>Mostachionator</title>
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
         <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
@@ -17,25 +18,30 @@
     <body>
 
         <ng-include src="'views/navbar.html'"></ng-include>
-
         <div class="container">
             <ng-view></ng-view>
         </div>
 
         <script src="vendor/jquery/dist/jquery.min.js"></script>
-        <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
         <script src="vendor/angular/angular.min.js"></script>
         <script src="vendor/angular-route/angular-route.min.js"></script>
+        <script src="vendor/angular-sanitize/angular-sanitize.min.js"></script>
 
         <script src="js/factories/sessionFactory.js"></script>
 
+
+        <script src="js/services/photoService.js"></script>
         <script src="js/services/userService.js"></script>
         <script src="js/services/todoService.js"></script>
 
-        <script src="js/controllers/mainController.js"></script>
         <script src="js/controllers/navbarController.js"></script>
-        <script src="js/controllers/loginController.js"></script>
+        <script src="js/controllers/mainController.js"></script>
+        <script src="js/controllers/createPhoto.js"></script>
+        <script src="js/controllers/deletePhoto.js"></script>
+
+        <script src="js/directives/findImage.js"></script>
+        <script src="js/directives/navbarFix.js"></script>
 
         <script src="js/routes.js"></script>
 
