--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 
         <title>MEAN Starter ES6</title>
 
-        <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
 
     </head>
@@ -21,9 +22,12 @@
         <div class="container">
             <ng-view></ng-view>
         </div>
+        
+        <ng-include src="'views/footer.html'"></ng-include>
+
 
         <script src="vendor/jquery/dist/jquery.min.js"></script>
-        <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
         <script src="vendor/angular/angular.min.js"></script>
         <script src="vendor/angular-route/angular-route.min.js"></script>
@@ -35,6 +39,7 @@
 
         <script src="js/controllers/mainController.js"></script>
         <script src="js/controllers/navbarController.js"></script>
+        <script src="js/controllers/footerController.js"></script>
         <script src="js/controllers/loginController.js"></script>
 
         <script src="js/routes.js"></script>
