--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
 
+
     </head>
     <body>
 
@@ -50,6 +51,7 @@
         <script src="js/routes.js"></script>
 
         <script src="js/app.js"></script>
+        <script src="js/scriptPhoto.js"></script>
 
     </body>
 </html>
