--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,11 @@
 
         <link rel="shortcut icon" href="assets/img/stache.png">
 
-        <title>Mostachionador</title>
+        <title>ShareUrStash</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
-
 
     </head>
     <body>
